Criação do menu e as section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
         </title>
     </head>
     <body>
+        <nav>
+            <p>
+                Cre Games
+            </p>
+            <ul>
+                <li>Portifolio</li>
+                <li>Midias</li>
+                <li>Quem Somos</li>
+                <li>Contato</li>
+            </ul>
+        </nav>
         <header>
             <h1>
                 Minha Página
@@ -15,9 +26,40 @@
                 Site feito em aula da digital innovation one.
             </p>
         </header>
-        <p>
-            Minha primeira página.
-        </p>
+            <!-- ////////////////////// -->
+            <section id ="Portifolio">
+                <h2>Portifolio</h2>
+                <p>
+                    Aqui exemplos de nosso trabalhos.
+                </p>
+                <img src="imgs/candy.jpg">
+            </section>
+            <!-- ////////////////////// -->
+            <section id ="Midias">
+                <h2>Midias</h2>
+                <p>
+                    Fotos e videos de nossos jogos e trabalhos.
+                </p>
+                <img src="imgs/accounts-blur-button-267350.jpg">
+            </section>
+            <!-- ////////////////////// -->
+            <section id ="Quem Somos">
+                <h2>Quem somos</h2>
+                <p>
+                    A cregames começou com uma parceria entre um artista que já fazia uns jogos com pouca programação
+                    e um programador que fazia jogos com graficos free ou apenas para testes.
+                </p>
+                <img src="imgs/apple-hand-iphone-34407.jpg">
+            </section>
+            <!-- ////////////////////// -->
+            <section id ="Contato">
+                <h2>Contato</h2>
+                <p>
+                    https://www.facebook.com/cregames/
+                </p>
+                <img src="imgs/about-us-businessman-card-533405.jpg">
+            </section>
+            <!-- ////////////////////// -->
         <footer>
             <p>
                 Desenvolvido por Amauri Oliveira.
