Criação dos hyperlinks do menu

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                 <p>
                     Aqui exemplos de nosso trabalhos.
                 </p>
-                <img src="imgs/candy.jpg">
+                <div>
+                    <img src="imgs/candy.jpg">
+                </div>
             </section>
             <!-- ////////////////////// -->
             <section id ="Midias">
@@ -40,7 +42,9 @@
                 <p>
                     Fotos e videos de nossos jogos e trabalhos.
                 </p>
-                <img src="imgs/accounts-blur-button-267350.jpg">
+                <div>
+                    <img src="imgs/accounts-blur-button-267350.jpg">
+                </div>
             </section>
             <!-- ////////////////////// -->
             <section id ="Quem Somos">
@@ -49,15 +53,19 @@
                     A cregames começou com uma parceria entre um artista que já fazia uns jogos com pouca programação
                     e um programador que fazia jogos com graficos free ou apenas para testes.
                 </p>
-                <img src="imgs/apple-hand-iphone-34407.jpg">
+                <div>
+                    <img src="imgs/apple-hand-iphone-34407.jpg">
+                </div>               
             </section>
             <!-- ////////////////////// -->
             <section id ="Contato">
                 <h2>Contato</h2>
                 <p>
-                    https://www.facebook.com/cregames/
+                   Aqui deve conter o contato para as rede sociais
                 </p>
-                <img src="imgs/about-us-businessman-card-533405.jpg">
+                <div>
+                    <img src="imgs/about-us-businessman-card-533405.jpg">  
+                </div>
             </section>
             <!-- ////////////////////// -->
         <footer>
