Adcinado links na div contato

--- a/index.html
+++ b/index.html
@@ -12,10 +12,18 @@
                 Cre Games
             </p>
             <ul>
-                <li>Portifolio</li>
-                <li>Midias</li>
-                <li>Quem Somos</li>
-                <li>Contato</li>
+                <li>
+                    <a href="#Portifolio">Portifolio</a>
+                </li>
+                <li>
+                    <a href="#Midias">Midias</a>
+                </li>
+                <li>
+                    <a href="#Quem Somos">Quem Somos</a>
+                </li>
+                <li>
+                    <a href="#Contato">Contato</a>
+                </li>
             </ul>
         </nav>
         <header>
@@ -61,7 +69,13 @@
             <section id ="Contato">
                 <h2>Contato</h2>
                 <p>
-                   Aqui deve conter o contato para as rede sociais
+                   Entre em contato com nossa equipe:
+                </p>
+                <p>
+                    <a href="mailto:amauriibate32@hotmail.com">amauriibate32@hotmail.com</a>
+                </p>
+                <p>
+                    <a href="tel:16991880766">(16)99188-0766</a>
                 </p>
                 <div>
                     <img src="imgs/about-us-businessman-card-533405.jpg">  
