Mudança no nome do diretorio para ficar dentro do padrão

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     Aqui exemplos de nosso trabalhos.
                 </p>
                 <div>
-                    <img src="imgs/candy.jpg">
+                    <img src="img/candy.jpg">
                 </div>
             </section>
             <!-- ////////////////////// -->
@@ -51,7 +51,7 @@
                     Fotos e videos de nossos jogos e trabalhos.
                 </p>
                 <div>
-                    <img src="imgs/accounts-blur-button-267350.jpg">
+                    <img src="img/accounts-blur-button-267350.jpg">
                 </div>
             </section>
             <!-- ////////////////////// -->
@@ -62,7 +62,7 @@
                     e um programador que fazia jogos com graficos free ou apenas para testes.
                 </p>
                 <div>
-                    <img src="imgs/apple-hand-iphone-34407.jpg">
+                    <img src="img/apple-hand-iphone-34407.jpg">
                 </div>               
             </section>
             <!-- ////////////////////// -->
@@ -77,8 +77,11 @@
                 <p>
                     <a href="tel:16991880766">(16)99188-0766</a>
                 </p>
+                <p>
+                    <a href="https://www.facebook.com/cregames/" target="_blank">Cre Game no Facebook</a>
+                </p>
                 <div>
-                    <img src="imgs/about-us-businessman-card-533405.jpg">  
+                    <img src="img/about-us-businessman-card-533405.jpg">  
                 </div>
             </section>
             <!-- ////////////////////// -->
