--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>
             Minha Página
         </title>
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
         <nav>
