Finalização do pagina basica de teste feita durante as aulas https://web.digitalinnovation.one/

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>
-            Minha Página
+            Cre Games
         </title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
@@ -42,7 +42,7 @@
                     Aqui exemplos de nosso trabalhos.
                 </p>
                 <div>
-                    <img src="img/candy.jpg">
+                    <img src="img/candy.jpg" class="img_with_margin">
                 </div>
             </section>
             <!-- ////////////////////// -->
@@ -52,7 +52,7 @@
                     Fotos e videos de nossos jogos e trabalhos.
                 </p>
                 <div>
-                    <img src="img/accounts-blur-button-267350.jpg">
+                    <img src="img/accounts-blur-button-267350.jpg" class="img_with_margin">
                 </div>
             </section>
             <!-- ////////////////////// -->
@@ -63,7 +63,7 @@
                     e um programador que fazia jogos com graficos free ou apenas para testes.
                 </p>
                 <div>
-                    <img src="img/apple-hand-iphone-34407.jpg">
+                    <img src="img/apple-hand-iphone-34407.jpg" class="img_with_margin">
                 </div>               
             </section>
             <!-- ////////////////////// -->
@@ -73,16 +73,16 @@
                    Entre em contato com nossa equipe:
                 </p>
                 <p>
-                    <a href="mailto:amauriibate32@hotmail.com">amauriibate32@hotmail.com</a>
+                    <a href="mailto:amauri@amauri.com">amauri@amauri.com</a>
                 </p>
                 <p>
-                    <a href="tel:16991880766">(16)99188-0766</a>
+                    <a href="tel:999999999">(99)99999-9999</a>
                 </p>
                 <p>
                     <a href="https://www.facebook.com/cregames/" target="_blank">Cre Game no Facebook</a>
                 </p>
                 <div>
-                    <img src="img/about-us-businessman-card-533405.jpg">  
+                    <img src="img/about-us-businessman-card-533405.jpg" width="300px">
                 </div>
             </section>
             <!-- ////////////////////// -->
